--- a/index.html
+++ b/index.html
@@ -3,26 +3,14 @@
  <head>
   <meta charset="utf-8">
   <title> help me choose </title>
-<style>
-body{
-background-image: url("tim-mossholder-666709-unsplash.jpg");
-background-repeat: no-repeat;
-background-size: 100%;
-font-family: arial;
-text-align: center;
-}
-h1{
-  font-weight: bold;
-  padding: 100px;
-}
+  <link href="main.css" rel="stylesheet" type="text/css">
 
-</style>
  </head>
 
 
   <body>
   <h1><font color="pink">Help me choose between...</font></h1>
-  <div>
+  <div class="inputSection">
 
     <div>
      <input placeholder="something"></input>
