--- a/index.html
+++ b/index.html
@@ -19,26 +19,35 @@
           <input placeholder="something"></input>
 
       </div>
-        <button class="addOption"> This is a button </button>
+        <button class= "addOption"> Add </button>
      </div>
 
- <div class="resultSection"></div>
+     <div class="resultSection"></div>
+     <button class="submit">Go!</button>
 
-       <button> Go! </button>
+     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+     <script>
+     $(function() {
+       $('.resultSection').hide()
 
-      <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+       var add_option = function () {
+         $('.inputs').append('<input></input>')
+       }
+       $('.addOption').click(add_option)
 
-      <script>
-
-        $(function(){
-          $('.resultSection').hide()
-
-          var add_option = function(){
-            $('.inputs').append ('<input></input>')
-          }
-          $('.addOption').click(add_option)
-
-        })
+    var options = []
+    var submit = function () {
+      $('.inputSection').hide()
+      $('.resultSection').css('display', 'flex')
+      $('input').each (function() {
+      options.push($(this).val())
+    })
+    var winner = options[Math.floor(Math.random() * options.length)]
+    console.log(winner)
+    $('.resultSection').text(winner)
+    }
+    $('.submit').click(submit)
+     })
 
       </script>
 
